Fix alignment issue in authentication sequence illustration

--- a/modules/theme/src/theme-core/definitions/apps/developer-portal.less
+++ b/modules/theme/src/theme-core/definitions/apps/developer-portal.less
@@ -232,6 +232,7 @@
 
                     svg.icon {
                         width: 28px;
+                        margin: 0 !important;
                     }
 
                     &:before {
